[package]
name = "vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="nlisp"
path="nlisp/main.rs"

[[bin]]
name="milton"
path="milton/main.rs"

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.27"
